crates/tui/tests/storybook/snapshots/app_tool__bash_tool_states.collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* bash cargo test -p smelt-tui app::drafts

* bash sleep 5  (timeout: 2m 0s)                               14:37:03

* bash git status --short                                      14:37:03

* bash cat missing.txt                                         14:37:03
  cat: missing.txt: No such file or directory








─ ✿ working… ───────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────
 ○ normal                                                       1:1 100%
