crates/tui/tests/storybook/snapshots/app_tool__edit_file_success_uses_retained_content_diff.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* edit_file src/lib.rs                                                     14:37:03
   1 - old
   1 + new







─ ✿ working… ───────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                   1:1 100%
