crates/tui/tests/storybook/snapshots/app_tool__edit_file_tool_states.collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* edit_file src/lib.rs
  3 old lines, 3 new lines

* edit_file src/pending.rs                                                 14:37:03
  1 old line, 1 new line

* edit_file src/lib.rs                                                     14:37:03
  3 old lines, 3 new lines

* edit_file runtime/lua/smelt/plugins/compact.lua                          14:37:03
  1 old line, 1 new line

* edit_file src/lib.rs                                                     14:37:03
  old_string not found in src/lib.rs












─ ✿ working… ───────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                   1:1 100%
