crates/tui/tests/storybook/snapshots/app_tool__edit_notebook_tool_states.collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* edit_notebook analysis.ipynb
  replaced cell, 2 lines

* edit_notebook analysis.ipynb                                             14:37:03
  replaced cell, 2 lines

* edit_notebook analysis.ipynb                                             14:37:03
  inserted cell, 1 lines










─ ✿ working… ───────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                   1:1 100%
