crates/tui/tests/storybook/snapshots/app_tool__glob_tool_states.collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* explore ×3 (1 error)                                         14:37:03
  glob **/*.rs in crates/term
  glob missing/**/*.rs
  glob [invalid










─ ✿ working… ───────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────
 ○ normal                                                       1:1 100%
